@@ -3,6 +3,8 @@
 	* tests/test-clientserver.py.in
 	(ClientServer.pingExpectingPrefix): Wrote method.
 	(ClientServer.test02_pingExpectingPrefix): Wrote method.
+	(ClientServer.test05_clientConnectionLost): Wrote method.
+	(ClientServer.clientConnectionLost.ReasonMockUp): Wrote method.
 
 	* tests/test-protocol.py.in: Set verbose to 5 so messages are printed.
 	(UGAMEProtocolTestCase.testConnectionLost): Added output search.
